// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHealth is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiHealth ouiHealth--textSizeS testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color #000000 is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="#000000"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color accent is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="accent"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color danger is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="danger"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color default is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="default"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color ghost is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="ghost"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color inherit is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="inherit"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color primary is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="primary"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color secondary is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="secondary"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color subdued is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="subdued"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color success is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color text is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="text"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props color warning is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="warning"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props textSize inherit is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeInherit"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props textSize m is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeM"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props textSize s is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;

exports[`OuiHealth props textSize xs is rendered 1`] = `
<div
  class="ouiHealth ouiHealth--textSizeXS"
>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterExtraSmall ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <span
        color="success"
        data-ouiicon-type="dot"
      />
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    />
  </div>
</div>
`;
